--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "nodebb-plugin-eve",
-    "version": "0.0.8",
+    "version": "0.1.0",
     "description": "NodeBB EVE registration whitelists",
     "main": "library.js",
     "scripts": {
@@ -15,6 +15,9 @@
         "plugin",
         "eve"
     ],
+    "nbbpm": {
+    	"compatibility": "^0.6.0"
+    },
     "author": "Schamper <mrwafflewaffle@aim.com>",
     "license": "BSD-2-Clause",
     "bugs": {
